CalculatorFrameTable.css
table, th, td {
    /* border:1px solid grey; */
    padding: 0;
    border: none;
  }

@keyframes swoopDown {
  from{bottom:15px; right:5px;}
  to{bottom:0px; right: 0px;}
}


div{
    position: relative;
    animation-name: swoopDown;
    animation-duration: .4s;
}

.Tire{
    letter-spacing: .05em;
    font-size: 1em;
}

input[type=checkbox] {
  display: inline;
  height: 1em;
  accent-color: rgb(255, 222, 34);
  border-radius: 5px;
  border: none;
  /* margin-left: 3px; */
}

.num {      
  width: 90%;
  min-width: 30px;
  border-radius: 5px;
  height: 2em;
  border: none;
  /* margin-right: 5px; */
  font-size: 1em;
  
}


.result {
  /* width: 9em; */
  width: 90%;
  border: none;
  background: rgb(255, 222, 34);
  border-radius: 5px;
  height: 2em;
  /* margin-right: 5px; */
  /* color: white; */
  font-weight: bold;
  min-width: 25px;
  font-size: 1em;
}

.CalcBody {
  background-image: url("background.jpg");
  background-color: transparent;

  margin-top: 50px;
  color: white;
  font-weight: bold;
  font-family: Roboto, sans-serif;
}

span[id=toolTip]{
  color: rgb(255, 222, 34);
  font-size: .8em;
  font-weight: bold;
  margin-right: 3px;

}
span[id=toolTip0]{
  color: rgb(255, 222, 34);
  font-size: .8em;
  font-weight: bold;
  margin-right: 3px;

}
span[id=toolTip1]{
  color: rgb(255, 222, 34);
  font-size: .8em;
  font-weight: bold;
  margin-right: 3px;
}

.postFix1{
  color: darkgrey;
  font-size: .8em;
  /* margin-left: 3px; */
}
.postFix2{
  color: darkgrey;
  font-size: 1.2em;
  /* margin-left: 5px; */
}
 
p[id=tipText] {
  display: none;
  position: absolute;
  top: 5px;
  z-index: 1;
  background-color: #6a07eb;
  padding: 4px;
  font-size: .8rem;
  color: darkgrey;
  border-radius: 5px;
  animation: fadeIn 0.7s;
}

p[id=tipText0] {
  display: none;
  position: absolute;
  top: 5px;
  z-index: 1;
  background-color: #6a07eb;
  padding: 4px;
  font-size: .8rem;
  color: darkgrey;
  border-radius: 5px;
  animation: fadeIn 0.7s;
}

p[id=tipText1] {
  display: none;
  position: absolute;
  top: 5px;
  z-index: 1;
  background-color: #6a07eb;
  padding: 4px;
  font-size: .8rem;
  color: darkgrey;
  border-radius: 5px;
  animation: fadeIn 0.7s;
}

@keyframes fadeIn {
  from {opacity: 0}
  to { opacity: 1}
}

